--- a/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.scss
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.scss
@@ -113,6 +113,14 @@
 }
 
 // TEMP STYLE
+.loading-container {
+  margin-top: 40%;
+}
+
+.standart-link {
+  cursor: pointer;
+}
+
 .select__search-input {
   color: black;
 }
