--- a/src/app/funds/balance/refill-money/refill-step-two/refill-step-two.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-step-two.component.html
@@ -5,6 +5,7 @@
 
 
 <app-refill-fiat
+  (closePopup)="closePopup.emit(true)"
   [refillData]="refillData"
   *ngIf="choosedName === FIAT_DEPOSIT"
 ></app-refill-fiat>
