--- a/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
@@ -1,4 +1,4 @@
-<div style="display: block;" *ngIf="activeFiat">
+<div style="display: block;" *ngIf="!!activeFiat && !!fiatDataByName">
   <div class="title refill__title" *ngIf="!submitSuccess">Fiat Deposit <span>{{activeFiat.name}}</span></div>
   <form [formGroup]="form">
     <div class="refill__inputs-wrap" *ngIf="!submitSuccess">
@@ -113,7 +113,7 @@
       <b>{{refillData.params.ok_item_1_price}} {{refillData.params.ok_currency}}</b>
     </div>
     <div class="subtitle refill__fiat-successful-subtitle">
-      You can track the progress in history section on <a class="standart-link" routerLink="/funds/balances">funds</a> page
+      You can track the progress in history section on <a class="standart-link" (click)="goToBalances()">funds</a> page
     </div>
 
     <form name="hideForm" method="post" [action]="refillData.redirectionUrl"
@@ -133,3 +133,6 @@
   </div>
 </div>
 
+<div class="loading-container" *ngIf="!activeFiat || !fiatDataByName">
+  <app-loader></app-loader>
+</div>
