--- a/src/app/funds/balance/refill-money/refill-step-two/refill-inner-transfer/refill-inner-transfer.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-inner-transfer/refill-inner-transfer.component.html
@@ -5,11 +5,20 @@
     <input class="wrap-input__input" name="code" formControlName="code">
     <label class="wrap-input__label">{{'Transfer code' | translate}}</label>
     <div class="wrap-input__line"></div>
+
+    <!--Input error section starts-->
+    <div class="input-hint-wrapper" *ngIf="!form.valid && form.get('code').touched">
+          <span class="wrap-input__message">
+            This field is required.
+          </span>
+    </div>
+    <!--Input error section ends-->
   </div>
 </form>
 
 <button class="btn btn--center"
 [ngClass]="{'btn--empty-blue': !form.valid}"
+        [disabled]="form.invalid"
         (click)="sendTransferCode()">
   {{'Receive transfer' | translate}}
 </button>
