--- a/src/app/funds/balance/refill-money/refill-step-two/refill-inner-transfer/refill-inner-transfer.component.scss
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-inner-transfer/refill-inner-transfer.component.scss
@@ -54,6 +54,13 @@
 }
 
 // TEMP STYLE
+.input-hint-wrapper {
+  opacity: 1;
+  .wrap-input__message{
+    color: #EB5757;
+  }
+}
+
 .btn--empty-blue{
   &:hover, &:focus{
     background-color: transparent !important;
