DEVEX-787 added subsciptions

--- a/src/app/dashboard/components/trading/trading.component.html
+++ b/src/app/dashboard/components/trading/trading.component.html
@@ -203,7 +203,7 @@
       </div>
       <div class="trading-notification__text">
         <div class="trading-notification__title">{{showLimit(createdOrder.baseType, true)}} {{createdOrder.orderType}} {{' Order created!' | translate}}</div>
-        <p>{{'Status:' | translate}} {{message}}</p>
+        <!-- <p>{{'Status:' | translate}} {{message}}</p> -->
         <!--<p>Submitted exchange limit sell order for 9 ZRX by using BTC</p>-->
       </div>
     </div>
@@ -227,7 +227,7 @@
       </div>
       <div class="trading-notification__text">
         <div class="trading-notification__title">{{showLimit(createdOrder.baseType, true)}} {{createdOrder.orderType}} {{' Order not created!' | translate}}</div>
-        <p> {{'Status:' | translate}} {{message}}</p>
+        <!-- <p> {{'Status:' | translate}} {{message}}</p> -->
         <!--<p>Submitted exchange limit sell order for 9 ZRX by using BTC</p>-->
       </div>
     </div>
