--- a/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.scss
+++ b/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.scss
@@ -226,6 +226,8 @@
 // TEMP STYLES
 .withdraw-limit-error{
   color: red;
-  padding: 200px 0;
+  height: 245px;
+  line-height: 245px;
   text-align: center;
+
 }
