--- a/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.scss
+++ b/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.scss
@@ -222,6 +222,7 @@ perfect-scrollbar{
 // TEMP STYLES
 .withdraw-limit-error{
   color: red;
-  padding: 200px 0;
+  height: 245px;
+  line-height: 245px;
   text-align: center;
 }
