--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -25,8 +25,7 @@
 
     </div>
     <app-market-search *ngIf="breakPoint === 'mobile'"></app-market-search>
-    <app-tools [dashboardItems]="widgets">
-    </app-tools>
+    <app-tools [dashboardItems]="widgets"></app-tools>
   </div>
 </div>
 
