--- a/src/app/settings/password/password.component.html
+++ b/src/app/settings/password/password.component.html
@@ -4,8 +4,9 @@
   <form class="settings-form" [formGroup]="form" (ngSubmit)="onSubmit()">
     <div class="settings__form-row">
       <div class="wrap-input wrap-input--fix230"
+       [ngClass]="{'wrap-input--error': !currentPassword.valid && currentPassword.touched && currentPassword.errors != null}"
       >
-      <!-- [ngClass]="{'wrap-input--error': !currentPassword.valid && currentPassword.touched && currentPassword.errors != null}" -->
+
         <input
           (input)="currentPasswordInput()"
           class="wrap-input__input"
@@ -23,19 +24,18 @@
         ></span>
         <!--Input error section starts-->
         <ng-container *ngIf="currentPassword.touched && currentPassword.errors != null">
-          <!-- <span
-            class="wrap-input__message"
-            *ngIf="currentPassword.errors['required']"
-          >
-            {{'Password field is required.' | translate}}
-          </span> -->
+
           <div class="input-hint-wrapper">
-            <span
-            class="wrap-input__message"
-            *ngIf="currentPassword.errors['wrong_password']"
-          >
-            {{'Wrong password.' | translate}}
-          </span>
+             <span
+               class="wrap-input__message"
+               *ngIf="currentPassword.errors['required']">
+            {{'Password field is required.' | translate}}
+             </span>
+             <span
+               class="wrap-input__message"
+               *ngIf="currentPassword.errors['wrong_password']">
+                {{'Current password invalid.' | translate}}
+             </span>
           </div>
           
           <!-- <span
