--- a/src/app/dashboard/components/markets/markets.component.html
+++ b/src/app/dashboard/components/markets/markets.component.html
@@ -122,9 +122,9 @@
         <div class="table__cell-head table__cell-head--tal table__cell-head--p4" style="width: 46%;">{{'Price' | translate}}
         </div>
         <div class="table__cell-head table__cell-head--tal table__cell-head--p4" style="width: 19%;">{{'Change %' | translate}}</div>
-        <!-- <div class="table__cell-head table__cell-head--tar table__cell-head--p4" style="width: 25%;" (click)="sortVolume()">
+        <div class="table__cell-head table__cell-head--tar table__cell-head--p4" style="width: 25%;" (click)="sortVolume()">
           {{'Volume' | translate}}
-        </div> -->
+        </div>
       </div>
 
       <!-- <cdk-virtual-scroll-viewport [itemSize]="31" style="height: 353px;"></cdk-virtual-scroll-viewport> -->
