--- a/src/app/dashboard/components/currency-pair-info/currency-pair-info.component.html
+++ b/src/app/dashboard/components/currency-pair-info/currency-pair-info.component.html
@@ -19,11 +19,11 @@
           <img class="currency-pair-info__arr-up" src="../assets/img/arr-up-green.svg" alt="" *ngIf="flarForArrow('up')">
           <img class="currency-pair-info__arr-down" src="../assets/img/arr-down-red.svg" alt="" *ngIf="flarForArrow('down')">
           <span>
-          {{currentCurrencyInfo?.changedValue || 0 | replaceNumber : isFiat(2) }} {{pair.currencyPairName | splitCurrency : 2}}
+          {{currentCurrencyInfo?.changedValue || 0 | replaceNumber : isFiat(2) }} {{pair.name | splitCurrency : 2}}
         </span>
         </div>
         <div class="currency-pair-info__price">
-          {{currentCurrencyInfo?.currencyRate || 0 | replaceNumber : isFiat(2) }} {{pair.currencyPairName | splitCurrency : 2}}
+          {{currentCurrencyInfo?.currencyRate || 0 | replaceNumber : isFiat(2) }} {{pair.name | splitCurrency : 2}}
         </div>
       </div>
     </div>
@@ -42,7 +42,7 @@
     <div class="currency-pair-info__item" style="min-width: 180px;">
       <div class="currency-pair-info__item-title">{{'24h volume' | translate}}</div>
       <span class="currency-pair-info__item-value" >
-        {{currentCurrencyInfo?.volume24h || 0 | number:'1.0-0' | replaceNumber}} {{pair.currencyPairName | splitCurrency : 1}}
+        {{currentCurrencyInfo?.volume24h || 0 | number:'1.0-0' | replaceNumber}} {{pair.name | splitCurrency : 1}}
       </span>
     </div>
     <!--<div class="currency-pair-info__item" *ngIf="userBalanceInfo">-->
