--- a/src/app/settings/verification/verification.component.html
+++ b/src/app/settings/verification/verification.component.html
@@ -1,4 +1,5 @@
-<div class="settings__content id-verification" *ngIf="showComponent">
+<div class="settings__content id-verification">
+  <div *ngIf="verificationStatus === KYC_STATUS.NONE">
   <h3 class="title settings__content-title">{{'Identity Verification' | translate}}</h3>
   <div
     class="subtitle settings__content-subtitle">{{'You must pass identity verification to access your withdrawal' | translate}}</div>
@@ -95,7 +96,37 @@
       [ngClass]="{'settings__form-btn--active': form.valid && !!modelDateTo?.date}"
     >{{'Send'  | translate}}</button>
   </div>
+  </div>
 
+  <div *ngIf="verificationStatus === KYC_STATUS.PENDING">
+    <div class="img-h3-wrapper">
+    <img src="assets/img/IconTime.svg" alt="">
+    <h3 class="title settings__content-title">{{'Identity Verification' | translate}}</h3>
+  </div>
+    <div
+      class="subtitle settings__content-subtitle">{{'Your KYC procedure is processing, press ' | translate}}
+      <button class="btn-string" (click)="restartProcedure()">Restart</button>
+      {{' to restart procedure' | translate}}</div>
+    <div class="row settings__buttons-row checkbox-outher">
+      <button class="btn settings__form-btn settings__password-btn settings__form-btn--active" routerLink="/">Go to dashboard</button>
+    </div>
+  </div>
+
+  <div *ngIf="verificationStatus === KYC_STATUS.VERIFIED">
+    <div class="img-h3-wrapper">
+    <img src="assets/img/IconChack.svg" alt="">
+    <h3 class="title settings__content-title">{{'Identity Verification' | translate}}</h3>
+    </div>
+    <div
+      class="subtitle settings__content-subtitle">{{'Your ID information has been verified.' | translate}}</div>
+    <div class="row settings__buttons-row checkbox-outher">
+      <button class="btn settings__form-btn settings__password-btn settings__form-btn--active" routerLink="/">Go to dashboard</button>
+    </div>
+  </div>
   <!--  ================= NEW KYC end ==================== -->
+  <div class="loading-container" *ngIf="!verificationStatus">
+    <app-loader></app-loader>
+  </div>
 </div>
+
 
