--- a/src/app/settings/verification/verification.component.html
+++ b/src/app/settings/verification/verification.component.html
@@ -105,7 +105,7 @@
   </div>
     <div
       class="subtitle settings__content-subtitle">{{'Your KYC procedure is processing, press ' | translate}}
-      <button class="btn-string" (click)="restartProcedure()">Restart</button>
+      <a class="standart-link" style="cursor: pointer" (click)="restartProcedure()">Restart</a>
       {{' to restart procedure' | translate}}</div>
     <div class="row settings__buttons-row checkbox-outher">
       <button class="btn settings__form-btn settings__password-btn settings__form-btn--active" routerLink="/">Go to dashboard</button>
