--- a/src/app/popups/restored-password-popup/restored-password-popup.component.html
+++ b/src/app/popups/restored-password-popup/restored-password-popup.component.html
@@ -3,6 +3,6 @@
     <div class="popup__close" (click)="closeRecoveryPassPopup()"></div>
     <h6 class="popup__title">{{'Thank you!' | translate}}</h6>
     <h4 class="popup__subtitle" [innerHTML]="'Now you can login <br> with your new password' | translate"></h4>
-    <button class="btn popup__btn" (click)="goToLogin()">{{'Login' | translate}}</button>
+    <button class="btn popup__btn popup__btn--active" (click)="goToLogin()">{{'Login' | translate}}</button>
   </div>
 </div>
