--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -19,5 +19,14 @@ ngx-gridster-item {
   }
 }
 
+// TEMP STYLE
+.graph_overlay {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  z-index: 99999999999;
+}
 
 
