--- a/src/app/dashboard/components/embedded-orders-mobile/embedded-orders-history-mobile/embedded-orders-history-mobile.component.html
+++ b/src/app/dashboard/components/embedded-orders-mobile/embedded-orders-history-mobile/embedded-orders-history-mobile.component.html
@@ -26,7 +26,7 @@
             </div>
           </td>
           <td class="table__cell table__cell--tal">
-            <span [class]="setClassForOrderTypeField(item.operationType)">{{item.operationType}}</span>
+            <span [class]="setClassForOrderTypeField(item.operationType)">{{item.operationType | replaceChar: '_': ' '}}</span>
           </td>
           <td class="table__cell table__cell--tar">
             <div>{{item.exExchangeRate}} {{item.currencyPairName | splitCurrency: 2}}</div>
