--- a/src/assets/scss/components/_tabs.scss
+++ b/src/assets/scss/components/_tabs.scss
@@ -29,8 +29,28 @@
     @media(max-width: 1199px){
       padding: 7px 0 7px;
     }
+    .qubera-icon{
+          margin-right: 5px;
+    padding-bottom: 2px;
+    svg{
+      display: block;
+      path{
+        fill: #94C2FF;
+      }
+    }
+    }
     &:hover{
       cursor: pointer;
+      .qubera-icon{
+          margin-right: 5px;
+    padding-bottom: 2px;
+    svg{
+      display: block;
+      path{
+        fill: #fff;
+      }
+    }
+    }
     }
     &--active{
       position: relative;
