--- a/src/app/funds/balance/qubera-table/qubera-table.component.html
+++ b/src/app/funds/balance/qubera-table/qubera-table.component.html
@@ -1,3 +1,66 @@
-<p>
-  qubera-table works!
-</p>
+<table class="table">
+    <thead>
+      <tr>
+        <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Currency' | translate}}</th>
+        <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Total balance' | translate}}</th>
+        <th class="table__cell-head table__cell-head--sort table__cell-head--tar">{{'Available balance' | translate}}</th>
+        <th class="table__cell-head table__cell-head--tac">{{'Deposit' | translate}}</th>
+        <th class="table__cell-head table__cell-head--tac">{{'Transfer' | translate}}</th>
+        <th class="table__cell-head table__cell-head--tac">{{'Withdraw' | translate}}</th>
+      </tr>
+    </thead>
+    <tbody class="table__body">
+      <tr class="table__row">
+        <td class="table__cell">
+          <div class="balance__currency">
+            <div class="balance__currency-icon">
+              <img src="assets/img/currency-icons/usd.svg">
+            </div>
+            <span style="min-width: 70px;">USD</span>
+            <span class="balance__currency-name">US Dollar</span>
+          </div>
+        </td>
+        <td class="table__cell table__cell--tal">
+          <span>233.92837422</span>
+        </td>
+        <td class="table__cell table__cell--tar">
+          <span>545.23143234</span>
+        </td>
+        <td class="table__cell">
+          <button class="btn btn--center btn--empty-blue btn--small btn--hidden" (click)="cryptoDepositOut.emit(item)">{{'Deposit' | translate}}</button>
+        </td>
+        <td class="table__cell">
+          <button class="btn btn--center btn--empty-blue btn--small btn--hidden" (click)="transferOut.emit(item)" >{{'Transfer' | translate}}</button>
+        </td>
+        <td class="table__cell">
+          <button class="btn btn--center btn--empty-blue btn--small btn--hidden" (click)="cryptoWithdrawOut.emit(item)">{{'Withdraw' | translate}}</button>
+        </td>
+      </tr>
+      <!-- <tr class="table__row balance__table-row">
+        <td class="table__cell table__cell--tac" colspan="10">
+          {{'No matching records found' | translate}}
+        </td>
+      </tr> -->
+    </tbody>
+  </table>
+
+  <!--paginator start-->
+<!--   <div
+    class="row row--aic balance__paginator"
+    *ngIf="countOfEntries > countPerPage"
+  >
+    <app-page-items-dropdown
+      [countPerPage]="countPerPage"
+      [countOfEntries]="countOfEntries"
+      (onChange)="changeItemsPerPage($event)"
+    ></app-page-items-dropdown>
+    <ul class="paginator" style="margin-left: auto;">
+      <pagination-controls
+        maxSize="7"
+        [previousLabel]="''"
+        [nextLabel]="''"
+        (pageChange)="changePage($event)"
+      ></pagination-controls>
+    </ul>
+  </div> -->
+  <!--paginator end-->
