qubera-table style

--- a/src/app/funds/balance/qubera-table/qubera-table.component.html
+++ b/src/app/funds/balance/qubera-table/qubera-table.component.html
@@ -1,9 +1,9 @@
-<table class="table">
+<table class="table qubera-table">
     <thead>
       <tr>
         <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Currency' | translate}}</th>
         <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Total balance' | translate}}</th>
-        <th class="table__cell-head table__cell-head--sort table__cell-head--tar">{{'Available balance' | translate}}</th>
+        <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Available balance' | translate}}</th>
         <th class="table__cell-head table__cell-head--tac">{{'Deposit' | translate}}</th>
         <th class="table__cell-head table__cell-head--tac">{{'Transfer' | translate}}</th>
         <th class="table__cell-head table__cell-head--tac">{{'Withdraw' | translate}}</th>
@@ -23,7 +23,7 @@
         <td class="table__cell table__cell--tal">
           <span>233.92837422</span>
         </td>
-        <td class="table__cell table__cell--tar">
+        <td class="table__cell table__cell--tal">
           <span>545.23143234</span>
         </td>
         <td class="table__cell">
