--- a/src/app/funds/balance/qubera-table/qubera-table.component.html
+++ b/src/app/funds/balance/qubera-table/qubera-table.component.html
@@ -27,13 +27,13 @@
           <span>545.23143234</span>
         </td>
         <td class="table__cell">
-          <button class="btn btn--center btn--empty-blue btn--small btn--hidden" (click)="cryptoDepositOut.emit(item)">{{'Deposit' | translate}}</button>
+          <button class="btn btn--center btn--empty-blue btn--small btn--hidden" (click)="cryptoDepositOut.emit(true)">{{'Deposit' | translate}}</button>
         </td>
         <td class="table__cell">
-          <button class="btn btn--center btn--empty-blue btn--small btn--hidden" (click)="transferOut.emit(item)" >{{'Transfer' | translate}}</button>
+          <button class="btn btn--center btn--empty-blue btn--small btn--hidden" (click)="transferOut.emit(true)" >{{'Transfer' | translate}}</button>
         </td>
         <td class="table__cell">
-          <button class="btn btn--center btn--empty-blue btn--small btn--hidden" (click)="cryptoWithdrawOut.emit(item)">{{'Withdraw' | translate}}</button>
+          <button class="btn btn--center btn--empty-blue btn--small btn--hidden" (click)="cryptoWithdrawOut.emit(true)">{{'Withdraw' | translate}}</button>
         </td>
       </tr>
       <!-- <tr class="table__row balance__table-row">
