--- a/src/app/funds/balance/send-money/send-step-two/send-step-two.component.html
+++ b/src/app/funds/balance/send-money/send-step-two/send-step-two.component.html
@@ -9,3 +9,6 @@
 <app-send-inner-transfer
   *ngIf="choosedName === INNER_TRANSFER"
 ></app-send-inner-transfer>
+<app-send-fiat-qubera
+  *ngIf="choosedName === FIAT_WITHDRAWAL_QUBERA">
+</app-send-fiat-qubera>
