--- a/src/app/funds/balance/refill-money/refill-step-two/refill-step-two.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-step-two.component.html
@@ -14,3 +14,7 @@
 <app-refill-inner-transfer
   *ngIf="choosedName === INNER_TRANSFER"
 ></app-refill-inner-transfer>
+
+<app-refill-fiat-qubera
+  *ngIf="choosedName === FIAT_DEPOSIT_QUBERA">
+</app-refill-fiat-qubera>
