--- a/src/app/funds/balance/send-money/send-step-three/send-step-three.component.html
+++ b/src/app/funds/balance/send-money/send-step-three/send-step-three.component.html
@@ -22,6 +22,10 @@
 >
 </app-send-tfa>
 
+<app-transfer-qubera
+  *ngIf="choosedName === QUBERA">
+</app-transfer-qubera>
+
 <!--<app-send-successful-->
 <!--*ngIf="choosedName === 'Send Success'"-->
 <!--[data]="responseData"-->
