--- a/src/app/funds/balance/qubera-table/qubera-table.component.html
+++ b/src/app/funds/balance/qubera-table/qubera-table.component.html
@@ -1,41 +1,41 @@
 <table class="table qubera-table">
-    <thead>
-      <tr>
-        <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Currency' | translate}}</th>
-        <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Total balance' | translate}}</th>
-        <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Available balance' | translate}}</th>
-        <th class="table__cell-head table__cell-head--tac">{{'Deposit' | translate}}</th>
-        <th class="table__cell-head table__cell-head--tac">{{'Transfer' | translate}}</th>
-        <th class="table__cell-head table__cell-head--tac">{{'Withdraw' | translate}}</th>
-      </tr>
-    </thead>
-    <tbody class="table__body">
-      <tr class="table__row">
-        <td class="table__cell">
-          <div class="balance__currency">
-            <div class="balance__currency-icon">
-              <img src="assets/img/currency-icons/usd.svg">
-            </div>
-            <span style="min-width: 70px;">USD</span>
-            <span class="balance__currency-name">US Dollar</span>
+  <thead>
+    <tr>
+      <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Currency' | translate}}</th>
+      <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Total balance' | translate}}</th>
+      <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Available balance' | translate}}</th>
+      <th class="table__cell-head table__cell-head--tac">{{'Deposit' | translate}}</th>
+      <th class="table__cell-head table__cell-head--tac">{{'Transfer' | translate}}</th>
+      <th class="table__cell-head table__cell-head--tac">{{'Withdraw' | translate}}</th>
+    </tr>
+  </thead>
+  <tbody class="table__body">
+    <tr class="table__row">
+      <td class="table__cell">
+        <div class="balance__currency">
+          <div class="balance__currency-icon">
+            <img src="assets/img/currency-icons/usd.svg">
           </div>
-        </td>
-        <td class="table__cell table__cell--tal">
-          <span>233.92837422</span>
-        </td>
-        <td class="table__cell table__cell--tal">
-          <span>545.23143234</span>
-        </td>
-        <td class="table__cell">
-          <button class="btn btn--center btn--empty-blue btn--small btn--hidden" (click)="cryptoDepositOut.emit(true)">{{'Deposit' | translate}}</button>
-        </td>
-        <td class="table__cell">
-          <button class="btn btn--center btn--empty-blue btn--small btn--hidden" (click)="transferOut.emit(true)" >{{'Transfer' | translate}}</button>
-        </td>
-        <td class="table__cell">
-          <button class="btn btn--center btn--empty-blue btn--small btn--hidden" (click)="cryptoWithdrawOut.emit(true)">{{'Withdraw' | translate}}</button>
-        </td>
-      </tr>
+          <span style="min-width: 70px;">USD</span>
+          <span class="balance__currency-name">US Dollar</span>
+        </div>
+      </td>
+      <td class="table__cell table__cell--tal">
+        <span>233.92837422</span>
+      </td>
+      <td class="table__cell table__cell--tal">
+        <span>545.23143234</span>
+      </td>
+      <td class="table__cell">
+        <button class="btn btn--center btn--empty-blue btn--small btn--hidden" (click)="cryptoDepositOut.emit(true)">{{'Deposit' | translate}}</button>
+      </td>
+      <td class="table__cell">
+        <button class="btn btn--center btn--empty-blue btn--small btn--hidden" (click)="transferOut.emit(true)" >{{'Transfer' | translate}}</button>
+      </td>
+      <td class="table__cell">
+        <button class="btn btn--center btn--empty-blue btn--small btn--hidden" (click)="cryptoWithdrawOut.emit(true)">{{'Withdraw' | translate}}</button>
+      </td>
+    </tr>
       <!-- <tr class="table__row balance__table-row">
         <td class="table__cell table__cell--tac" colspan="10">
           {{'No matching records found' | translate}}
@@ -43,6 +43,30 @@
       </tr> -->
     </tbody>
   </table>
+
+  <div class="no-veryfied-qubera">
+    <div class="qubera-icon">
+      <svg width="24" height="21" viewBox="0 0 24 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M4.14605 7.02734H6.0973L6.39013 16.003H3.90234L4.14605 7.02734Z" fill="white"/>
+        <path
+        d="M2.48779 16.4883H21.5124V17.5126H22.9757V18.9761H24V20.0005H0V18.9761H1.02427V17.5126H2.48779V16.4883Z"
+        fill="white"/>
+        <path d="M22.4872 4.39023L11.9994 0L1.51172 4.39023V5.02454H22.4872V4.39023Z" fill="white"/>
+        <path d="M20.4873 5.51172H3.51172V6.48702H20.4873V5.51172Z" fill="white"/>
+        <path d="M17.8534 7.02734H19.8043L20.0972 16.003H17.6094L17.8534 7.02734Z" fill="white"/>
+        <path d="M13.2694 7.02734H15.2693L15.5621 16.003H13.0254L13.2694 7.02734Z" fill="white"/>
+        <path d="M8.73017 7.02734H10.6814L10.9741 16.003H8.4375L8.73017 7.02734Z" fill="white"/>
+      </svg>
+    </div>
+    <div class="qubera-txt">
+      <p>У Вас нету аккаунта в Qubera Bank</p>
+      <p>Для того что бы создать аккаунт нажмите кнопку ниже</p>
+    </div>
+    <div class="qubera-btn-wr">
+      <button class="btn btn--active balance__title-btn">Create Account Qubera</button>
+    </div>
+    
+  </div>
 
   <!--paginator start-->
 <!--   <div
