--- a/src/assets/scss/pages/_balance.scss
+++ b/src/assets/scss/pages/_balance.scss
@@ -674,3 +674,37 @@
 }
 
 /*--- DARK THEME END---*/
+.no-veryfied-qubera{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 45px 10px;
+
+  .qubera-icon{
+    width: 64px;
+    height: 64px;
+    margin-bottom: 22px;
+    svg{
+      width: 100%;
+      height: 100%;
+      display: block;
+      path{
+        fill:#94C2FF;
+      }
+    }
+  }
+  .qubera-txt{
+    margin-bottom: 15px;
+    p{
+      font-size: 18px;
+      color: #FFFFFF;
+      margin-bottom: 22px;
+      text-align: center;
+    }
+  }
+  .qubera-btn-wr{
+    button{
+      width: 227px;
+    }
+  }
+}
